Setup the navbar, layout of page using bootstrap, just finding out what will work for this app that would not look too bad aesthetically.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,29 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <main>
+    <!-- Example purposes, this would be a real nav in production application. Not just text -->
+    <nav class="container-fluid text-center bg-secondary py-3" style="height: 10vh;">
+      <h4 class="text-white">Weather App</h4>
+    </nav>
+    <!-- Container that will hold our app -->
+    <div class="container" style="height: 85vh;">
+      <div class="row">
+        <div class="col-4 bg-secondary text-center">Testing</div>
+        <div class="col-8 bg-danger  text-center">
+            <div class="row">
+                <div class="col p-3">Testing</div>
+            </div>
+            <div class="row">
+                <div class="col p-3">Testing</div>
+            </div>
+        </div>
+      </div>
+    </div>
     <script src="script.js"></script>
   </body>
+</main>
+<footer class="container-fluid text-center py-1" style="height: 5vh;">
+<p>&copy; Christian B. Martinez 2023</p>
+</footer>
 </html>
