Added a basic layout, following the example layout given from the course. I think it is time to use js to add data to the page now, and get rid of static data

--- a/index.html
+++ b/index.html
@@ -22,13 +22,82 @@
     <!-- Container that will hold our app -->
     <div class="container" style="height: 85vh;">
       <div class="row">
-        <div class="col-4 bg-secondary text-center">Testing</div>
-        <div class="col-8 bg-danger  text-center">
-            <div class="row">
-                <div class="col p-3">Testing</div>
+        <div class="col-4 text-left mt-5">
+            <h5>Search a City:</h5>
+            <div class="input-group mb-3">
+                <input aria-placeholder="San Diego" type="text" class="form-control shadow-none" placeholder="" aria-label="" aria-describedby="basic-addon1">
+                <button class="btn btn-outline-secondary" type="button">Button</button>  
             </div>
-            <div class="row">
-                <div class="col p-3">Testing</div>
+            <hr>
+            <h5>Recent Searches:</h5>
+            <p class="text-muted">Nothing yet! Search for a city</p> 
+        </div>
+        <div class="col-8 mt-5">
+            <div class="row d-flex p-3">
+                <div class="col p-3">
+                    <div class="container border border-secondary rounded p-3">
+                        <div class="row">
+                            <h5 class="mb-3">City Name</h5>
+                            <p>Temp</p>
+                            <p>Wind</p>
+                            <p>Humidity</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row d-flex p-3">
+                <div class="col p-3">                    
+
+                        <h5 class="mb-3">5 day forecast</h5>
+                        <div class="row">
+                            <div class="card" style="width: auto; margin-right:1em;">
+                                <div class="card-body">
+                                    <h5>Date</h5>
+                                    <img class="card-img-top my-2" src="/img/icons8-summer-48.png"  style='width: 25px; height: 25px;' alt="Card image cap">
+                                  <p class="card-text">Temp</p>
+                                  <p class="card-text">Wind</p>
+                                  <p class="card-text">Humidity</p>
+                                </div>
+                              </div>
+                              <div class="card" style="width: auto; margin-right:1em;">
+                                <div class="card-body">
+                                    <h5>Date</h5>
+                                    <img class="card-img-top my-2" src="/img/icons8-summer-48.png"  style='width: 25px; height: 25px;' alt="Card image cap">
+                                  <p class="card-text">Temp</p>
+                                  <p class="card-text">Wind</p>
+                                  <p class="card-text">Humidity</p>
+                                </div>
+                              </div>
+                              <div class="card" style="width: auto; margin-right:1em;">
+                                <div class="card-body">
+                                    <h5>Date</h5>
+                                    <img class="card-img-top my-2" src="/img/icons8-summer-48.png"  style='width: 25px; height: 25px;' alt="Card image cap">
+                                  <p class="card-text">Temp</p>
+                                  <p class="card-text">Wind</p>
+                                  <p class="card-text">Humidity</p>
+                                </div>
+                              </div>
+                              <div class="card" style="width: auto; margin-right:1em;">
+                                <div class="card-body">
+                                    <h5>Date</h5>
+                                    <img class="card-img-top my-2" src="/img/icons8-summer-48.png"  style='width: 25px; height: 25px;' alt="Card image cap">
+                                  <p class="card-text">Temp</p>
+                                  <p class="card-text">Wind</p>
+                                  <p class="card-text">Humidity</p>
+                                </div>
+                              </div>
+                              <div class="card" style="width: auto; margin-right:1em;">
+                                <div class="card-body">
+                                    <h5>Date</h5>
+                                    <img class="card-img-top my-2" src="/img/icons8-summer-48.png"  style='width: 25px; height: 25px;' alt="Card image cap">
+                                  <p class="card-text">Temp</p>
+                                  <p class="card-text">Wind</p>
+                                  <p class="card-text">Humidity</p>
+                                </div>
+                              </div>
+                              
+                    </div>
+                </div>
             </div>
         </div>
       </div>
@@ -36,7 +105,7 @@
     <script src="script.js"></script>
   </body>
 </main>
-<footer class="container-fluid text-center py-1" style="height: 5vh;">
+<footer class="container-fluid text-center" style="height: 5vh;">
 <p>&copy; Christian B. Martinez 2023</p>
 </footer>
 </html>
