--- a/index.html
+++ b/index.html
@@ -25,22 +25,24 @@
         <div class="col-4 text-left mt-5">
             <h5>Search a City:</h5>
             <div class="input-group mb-3">
-                <input aria-placeholder="San Diego" type="text" class="form-control shadow-none" placeholder="" aria-label="" aria-describedby="basic-addon1">
-                <button class="btn btn-outline-secondary" type="button">Button</button>  
+                <input id="search" aria-placeholder="San Diego" type="text" class="form-control shadow-none" placeholder="San Diego" aria-label="" aria-describedby="basic-addon1">
+                <button id="submit" class="btn btn-outline-secondary" type="button">Button</button>  
             </div>
             <hr>
             <h5>Recent Searches:</h5>
-            <p class="text-muted">Nothing yet! Search for a city</p> 
+            <div id="recent-searches">
+                <p class="text-muted">Nothing yet! Search for a city</p> 
+            </div>
         </div>
         <div class="col-8 mt-5">
             <div class="row d-flex p-3">
                 <div class="col p-3">
                     <div class="container border border-secondary rounded p-3">
                         <div class="row">
-                            <h5 class="mb-3">City Name</h5>
-                            <p>Temp</p>
-                            <p>Wind</p>
-                            <p>Humidity</p>
+                            <h5 class="mb-3" id="city-name"></h5>
+                            <p id="temp"></p>
+                            <p id="wind"></p>
+                            <p id="humidity"></p>
                         </div>
                     </div>
                 </div>
@@ -52,50 +54,13 @@
                         <div class="row">
                             <div class="card" style="width: auto; margin-right:1em;">
                                 <div class="card-body">
-                                    <h5>Date</h5>
+                                    <h5 id="forecast-date">Date</h5>
                                     <img class="card-img-top my-2" src="/img/icons8-summer-48.png"  style='width: 25px; height: 25px;' alt="Card image cap">
-                                  <p class="card-text">Temp</p>
-                                  <p class="card-text">Wind</p>
-                                  <p class="card-text">Humidity</p>
+                                  <p id="forecast-temp" class="card-text">Temp</p>
+                                  <p id="forecast-wind" class="card-text">Wind</p>
+                                  <p id="forecast-humidity" class="card-text">Humidity</p>
                                 </div>
-                              </div>
-                              <div class="card" style="width: auto; margin-right:1em;">
-                                <div class="card-body">
-                                    <h5>Date</h5>
-                                    <img class="card-img-top my-2" src="/img/icons8-summer-48.png"  style='width: 25px; height: 25px;' alt="Card image cap">
-                                  <p class="card-text">Temp</p>
-                                  <p class="card-text">Wind</p>
-                                  <p class="card-text">Humidity</p>
-                                </div>
-                              </div>
-                              <div class="card" style="width: auto; margin-right:1em;">
-                                <div class="card-body">
-                                    <h5>Date</h5>
-                                    <img class="card-img-top my-2" src="/img/icons8-summer-48.png"  style='width: 25px; height: 25px;' alt="Card image cap">
-                                  <p class="card-text">Temp</p>
-                                  <p class="card-text">Wind</p>
-                                  <p class="card-text">Humidity</p>
-                                </div>
-                              </div>
-                              <div class="card" style="width: auto; margin-right:1em;">
-                                <div class="card-body">
-                                    <h5>Date</h5>
-                                    <img class="card-img-top my-2" src="/img/icons8-summer-48.png"  style='width: 25px; height: 25px;' alt="Card image cap">
-                                  <p class="card-text">Temp</p>
-                                  <p class="card-text">Wind</p>
-                                  <p class="card-text">Humidity</p>
-                                </div>
-                              </div>
-                              <div class="card" style="width: auto; margin-right:1em;">
-                                <div class="card-body">
-                                    <h5>Date</h5>
-                                    <img class="card-img-top my-2" src="/img/icons8-summer-48.png"  style='width: 25px; height: 25px;' alt="Card image cap">
-                                  <p class="card-text">Temp</p>
-                                  <p class="card-text">Wind</p>
-                                  <p class="card-text">Humidity</p>
-                                </div>
-                              </div>
-                              
+                                </div>                              
                     </div>
                 </div>
             </div>
