Getting a response, but it does not show data. Looking into that later. Going on a hike for now.

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
       <div class="row">
         <div class="col-4 text-left mt-5">
             <h5>Search a City:</h5>
-            <div class="input-group mb-3">
-                <input id="search" aria-placeholder="San Diego" type="text" class="form-control shadow-none" placeholder="San Diego" aria-label="" aria-describedby="basic-addon1">
-                <button id="submit" class="btn btn-outline-secondary" type="button">Button</button>  
-            </div>
+            <form class="input-group mb-3">
+                <input id='search' required aria-placeholder="San Diego" type="text" class="form-control shadow-none" placeholder="San Diego" aria-label="" aria-describedby="basic-addon1">
+                <button type='submit' class="btn btn-outline-secondary">Button</button>  
+            </form>
             <hr>
             <h5>Recent Searches:</h5>
             <div id="recent-searches">
@@ -48,19 +48,18 @@
                 </div>
             </div>
             <div class="row d-flex p-3">
-                <div class="col p-3">                    
-
-                        <h5 class="mb-3">5 day forecast</h5>
-                        <div class="row">
-                            <div class="card" style="width: auto; margin-right:1em;">
-                                <div class="card-body">
-                                    <h5 id="forecast-date">Date</h5>
-                                    <img class="card-img-top my-2" src="/img/icons8-summer-48.png"  style='width: 25px; height: 25px;' alt="Card image cap">
-                                  <p id="forecast-temp" class="card-text">Temp</p>
-                                  <p id="forecast-wind" class="card-text">Wind</p>
-                                  <p id="forecast-humidity" class="card-text">Humidity</p>
-                                </div>
-                                </div>                              
+                <div class="col p-3">    
+                    <h5 class="mb-3">5 day forecast</h5>
+                    <div class="row">
+                        <div class="card" style="width: auto; margin-right:1em;">
+                            <div class="card-body">
+                                <h5 id="forecast-date">Date</h5>
+                                <img class="card-img-top my-2" src="/img/icons8-summer-48.png"  style='width: 25px; height: 25px;' alt="Card image cap">
+                              <p id="forecast-temp" class="card-text">Temp</p>
+                              <p id="forecast-wind" class="card-text">Wind</p>
+                              <p id="forecast-humidity" class="card-text">Humidity</p>
+                            </div>
+                        </div>                              
                     </div>
                 </div>
             </div>
