--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <div class="container border border-secondary rounded p-3">
                         <div class="row">
                             <h5 class="mb-3" id="city-name"></h5>
-                            <p id="temp"></p>
+                            <p id="temp">74</p>
                             <p id="wind"></p>
                             <p id="humidity"></p>
                         </div>
@@ -53,7 +53,7 @@
                     <div class="row">
                         <div class="card" style="width: auto; margin-right:1em;">
                             <div class="card-body">
-                                <h5 id="forecast-date">Date</h5>
+                                <h5 id="forecast-date"></h5>
                                 <img class="card-img-top my-2" src="/img/icons8-summer-48.png"  style='width: 25px; height: 25px;' alt="Card image cap">
                               <p id="forecast-temp" class="card-text">Temp</p>
                               <p id="forecast-wind" class="card-text">Wind</p>
@@ -66,6 +66,7 @@
         </div>
       </div>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/dayjs/1.11.7/dayjs.min.js" integrity="sha512-hcV6DX35BKgiTiWYrJgPbu3FxS6CsCjKgmrsPRpUPkXWbvPiKxvSVSdhWX0yXcPctOI2FJ4WP6N1zH+17B/sAA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="script.js"></script>
   </body>
 </main>
