--- a/index.html
+++ b/index.html
@@ -47,18 +47,10 @@
                     </div>
                 </div>
             </div>
-            <div class="row d-flex p-3">
+            <div id='forecast' class="row d-flex p-3">
+              <h5 id="forecast-city"></h5>
                 <div class="col p-3">    
-                    <h5 class="mb-3">5 day forecast</h5>
-                    <div class="row">
-                        <div class="card" style="width: auto; margin-right:1em;">
-                            <div class="card-body">
-                                <h5 id="forecast-date"></h5>
-                                <img class="card-img-top my-2" src="/img/icons8-summer-48.png"  style='width: 25px; height: 25px;' alt="Card image cap">
-                              <p id="forecast-temp" class="card-text">Temp</p>
-                              <p id="forecast-wind" class="card-text">Wind</p>
-                              <p id="forecast-humidity" class="card-text">Humidity</p>
-                            </div>
+                    
                         </div>                              
                     </div>
                 </div>
