--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
   <body>
     <main>
     <!-- Example purposes, this would be a real nav in production application. Not just text -->
-    <nav class="container-fluid text-center bg-secondary py-3" style="height: 10vh;">
+    <nav class="container-fluid d-flex justify-content-center bg-secondary py-3" style="height: auto;">
       <h4 class="text-white">Weather App</h4>
     </nav>
     <!-- Container that will hold our app -->
-    <div class="container" style="height: 85vh;">
+    <div class="container" style="height: 100vh">
       <div class="row">
         <div class="col-4 text-left mt-5">
             <h5>Search a City:</h5>
@@ -34,7 +34,7 @@
                 <p class="text-muted">Nothing yet! Search for a city</p> 
             </div>
         </div>
-        <div class="col-8 mt-5">
+        <div class="col-8 my-5">
             <div class="row d-flex p-3">
                 <div class="col p-3">
                     <div class="container border border-secondary rounded p-3">
@@ -47,9 +47,9 @@
                     </div>
                 </div>
             </div>
-            <div id='forecast' class="row d-flex p-3">
+            <div class="row d-flex py-3">
               <h5 id="forecast-city"></h5>
-                <div class="col p-3">    
+                <div id='forecast' class="d-inline-flex">    
                     
                         </div>                              
                     </div>
@@ -62,7 +62,7 @@
     <script src="script.js"></script>
   </body>
 </main>
-<footer class="container-fluid text-center" style="height: 5vh;">
-<p>&copy; Christian B. Martinez 2023</p>
+<footer class="container-fluid d-flex justify-content-center bg-secondary py-1 mt-10 position-fixed bottom-0">
+<p class="mt-2 text-white">&copy; Christian B. Martinez 2023</p>
 </footer>
 </html>
