--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <div class="container border border-secondary rounded p-3">
                         <div class="row">
                             <h5 class="mb-3" id="city-name"></h5>
-                            <p id="temp">74</p>
+                            <p id="temp"></p>
                             <p id="wind"></p>
                             <p id="humidity"></p>
                         </div>
