It works! Just need to get some bugs ironed out

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <hr>
             <h5>Recent Searches:</h5>
             <div id="recent-searches">
-                <p class="text-muted">Nothing yet! Search for a city</p>
+                Nothing yet! Search for a city
             </div>
         </div>
         <div class="col-8 my-5">
